2001-11-03 Terry Biggs <tbiggs@users.sourceforge.net>

	* one more time - change look of search results - to give preview of verses found
	  using a clist for verse ref and verse preview.

2001-11-01 Terry Biggs <tbiggs@users.sourceforge.net>

	* Added two buttons to main toolbar - Footnotes and Morph Tags
	
	
2001-10-22 Terry Biggs <tbiggs@users.sourceforge.net>

	* made dependant on sword cvs to get ready for 
	  sword-1.5.3
	* removed all local render filters (now using sword's)


2001-10-19 Terry Biggs <tbiggs@users.sourceforge.net>

	*  fixed to build using gtkhtml-0.15.99-snap.ximian.200110181519

2001-10-10 Terry Biggs <tbiggs@users.sourceforge.net>

	* released 0.5.2a - mostly bug fixes
	* requires gnome-1.4.0, gal-0.13.9 and gtkhtml-0.14.9
	* droped the preview of search results - much to slow.
	* added highlight to search results for word and pharase searchs

2001-10-02 Terry Biggs <tbiggs@users.sourceforge.net>

	* change look of search results - to give preview of verses found

2001-10-01 Terry Biggs <tbiggs@users.sourceforge.net>

	* fixed another shortcut bar bug - caused crash when deleting last 
	  shortcut item in a group
	  

2001-09-20 Terry Biggs <tbiggs@users.sourceforge.net>

	* added po directory and gettext support
	* added _() to strings that need to be translated - lots of work left to do
	

2001-09-18 Terry Biggs <tbiggs@users.sourceforge.net>

	* added horz scroll bar to commentary window.
	* fixed the last fix - right this time I hope.


2001-09-15 Terry Biggs <tbiggs@users.sourceforge.net>

	* fixed shortcut-bar crash on changing groups
	  which started with gal snapshot 200109150708 release
	  

2001-09-13 Terry Biggs <tbiggs@users.sourceforge.net>

	*  gs will now display book introductions for thml commentaries
	   that have them.


2001-09-10 Terry Biggs <tbiggs@users.sourceforge.net>

	*  fixed bug that cause gs to crash when selecting text
	   in interlinear page
	

2001-09-04 Terry Biggs <tbiggs@users.sourceforge.net>
