@@ -1,3 +1,8 @@
+2001-11-06Terry Biggs <tbiggs@users.sourceforge.net>
+
+	* fixed some problems with the shortcut bar
+	* added menu item to module shortcut bars to add all modules to the shortcut bar
+
 2001-11-03 Terry Biggs <tbiggs@users.sourceforge.net>
 
 	* one more time - change look of search results - to give preview of verses found
